--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           </div>
           <div class="link">
             <a href="/index.html">Inicio</a>
-            <a href="/html/nosotros.html">Nosotros</a>
-            <a href="/html/lugares.html">Lugares</a>
-            <a href="/html/videos.html">Videos</a>
-            <a href="/html/contactos.html">Contactos</a>
+            <a href="html/nosotros.html">Nosotros</a>
+            <a href="html/lugares.html">Lugares</a>
+            <a href="html/videos.html">Videos</a>
+            <a href="html/contactos.html">Contactos</a>
           </div>
         </div>
       </nav>
