--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </h1>
           </div>
           <div class="link">
-            <a href="/index.html">Inicio</a>
-            <a href="html/nosotros.html">Nosotros</a>
-            <a href="html/lugares.html">Lugares</a>
-            <a href="html/videos.html">Videos</a>
-            <a href="html/contactos.html">Contactos</a>
+            <a href="index.html">Inicio</a>
+            <a href="/nosotros.html">Nosotros</a>
+            <a href="/lugares.html">Lugares</a>
+            <a href="/videos.html">Videos</a>
+            <a href="/contactos.html">Contactos</a>
           </div>
         </div>
       </nav>
