--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LugaresUnicosCordoba | nosotros</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -15,11 +15,11 @@
             <img src="../img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
           </h1>
           <div class="link">
-            <a href="/index.html">Inicio</a>
-            <a href="/html/nosotros.html">Nosotros</a>
-            <a href="/html/lugares.html">Lugares</a>
-            <a href="/html/videos.html">Videos</a>
-            <a href="/html/contactos.html">Contactos</a>
+            <a href="index.html">Inicio</a>
+            <a href="/nosotros.html">Nosotros</a>
+            <a href="/lugares.html">Lugares</a>
+            <a href="/videos.html">Videos</a>
+            <a href="/contactos.html">Contactos</a>
           </div>
         </div>
       </nav>
