--- a/html/contactos.html
+++ b/html/contactos.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
@@ -20,11 +20,11 @@
             YO AMO CBA
           </h1>
           <div class="link">
-            <a href="index.html">Inicio</a>
-            <a href="/nosotros.html">Nosotros</a>
-            <a href="/lugares.html">Lugares</a>
-            <a href="/videos.html">Videos</a>
-            <a href="/contactos.html">Contactos</a>
+            <a href="../html/index.html">Inicio</a>
+            <a href="hmtl/nosotros.html">Nosotros</a>
+            <a href="html/lugares.html">Lugares</a>
+            <a href="html/videos.html">Videos</a>
+            <a href="html/contactos.html">Contactos</a>
           </div>
         </div>
       </nav>
