--- a/html/contactos.html
+++ b/html/contactos.html
@@ -21,10 +21,10 @@
           </h1>
           <div class="link">
             <a href="../html/index.html">Inicio</a>
-            <a href="hmtl/nosotros.html">Nosotros</a>
-            <a href="html/lugares.html">Lugares</a>
-            <a href="html/videos.html">Videos</a>
-            <a href="html/contactos.html">Contactos</a>
+            <a href="../hmtl/nosotros.html">Nosotros</a>
+            <a href="../html/lugares.html">Lugares</a>
+            <a href="../html/videos.html">Videos</a>
+            <a href="../html/contactos.html">Contactos</a>
           </div>
         </div>
       </nav>
@@ -37,7 +37,7 @@
             Para mas informacion dejanos tus dudas en los comentarios y te
             responderemos a la brevedad
           </p>
-          <form action="/mensaje.html" method="get">
+          <form action="../html/mensaje.html" method="get">
             <label for="">Nombre y Apellido:</label>
             <input
               type="text"
