--- a/html/lugares.html
+++ b/html/lugares.html
@@ -11,15 +11,15 @@
       <nav>
         <div class="menu-principal">
         <h1>
-            <img src="img/logocordoba.avif" alt="Bandera Cordoba" /> YO
-            <img src="img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
+            <img src="../img/logocordoba.avif" alt="Bandera Cordoba" /> YO
+            <img src="../img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
         </h1>
         <div class="link">
-          <a href="index.html">Inicio</a>
-          <a href="/nosotros.html">Nosotros</a>
-          <a href="/lugares.html">Lugares</a>
-          <a href="/videos.html">Videos</a>
-          <a href="/contactos.html">Contactos</a>
+          <a href="../index.html">Inicio</a>
+          <a href="../html/nosotros.html">Nosotros</a>
+          <a href="../html/lugares.html">Lugares</a>
+          <a href="../html/videos.html">Videos</a>
+          <a href="../html/contactos.html">Contactos</a>
       </div>
       </div>
       </nav>
