--- a/html/contactos.html
+++ b/html/contactos.html
@@ -20,7 +20,7 @@
             YO AMO CBA
           </h1>
           <div class="link">
-            <a href="../html/index.html">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <a href="../hmtl/nosotros.html">Nosotros</a>
             <a href="../html/lugares.html">Lugares</a>
             <a href="../html/videos.html">Videos</a>
