--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <header>
       <nav>
         <div class="menu-principal">
-          <div class="titulo-principal">
-            <h1>
-              <img src="img/logocordoba.avif" alt="Bandera Cordoba" /> YO
-              <img src="img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
-            </h1>
-          </div>
+          <h1>
+            <img src="img/logocordoba.avif" alt="Bandera Cordoba" /> YO
+            <img src="img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
+          </h1>
           <div class="link">
             <a href="index.html">Inicio</a>
             <a href="html/nosotros.html">Nosotros</a>
@@ -26,14 +24,15 @@
         </div>
       </nav>
     </header>
-
-    <section>
-      <div class="pag-inicio">
-        <h2>Lugares unicos para visitar en Cordoba</h2>
-        <video id="videoprincipal" controls autoplay>
-          <source src="videos/Cordoba en general 1.mp4" type="video/mp4" />
-        </video>
-      </div>
-    </section>
+    <main>
+      <section>
+        <div class="pag-inicio">
+          <h2>Lugares unicos para visitar en Cordoba</h2>
+          <video id="videoprincipal" controls autoplay>
+            <source src="videos/Cordoba en general 1.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
