--- a/html/contactos.html
+++ b/html/contactos.html
@@ -17,7 +17,18 @@
       <nav>
         <div class="menu-principal">
           <h1>
-            YO AMO CBA
+            <img
+              src="../img/logocordoba.avif"
+              alt="Bandera Cordoba"
+              style="height: 60px; width: 70px"
+            />
+            YO
+            <img
+              src="../img/icons8-me-gusta-48.png"
+              alt="Corazon"
+              style="height: 60px; width: 60px"
+            />
+            CBA
           </h1>
           <div class="link">
             <a href="../index.html">Inicio</a>
@@ -29,55 +40,57 @@
         </div>
       </nav>
     </header>
-    <section>
-      <h2>Lugares unicos para visitar en Cordoba</h2>
-    </section>
-    <div class="contacto-config">
-          <p>
-            Para mas informacion dejanos tus dudas en los comentarios y te
-            responderemos a la brevedad
-          </p>
-          <form action="../html/mensaje.html" method="get">
-            <label for="">Nombre y Apellido:</label>
+    <main>
+      <section>
+        <h2>Lugares unicos para visitar en Cordoba</h2>
+      </section>
+      <div class="contacto-config">
+        <p>
+          Para mas informacion dejanos tus dudas en los comentarios y te
+          responderemos a la brevedad
+        </p>
+        <form action="../html/mensaje.html" method="get">
+          <label for="">Nombre y Apellido:</label>
+          <input
+            type="text"
+            name="nombre"
+            id="nombre"
+            placeholder="Susana Horia"
+          />
+          <section>
+            <label for="">Numero de Telefono:</label>
             <input
-              type="text"
-              name="nombre"
-              id="nombre"
-              placeholder="Susana Horia"
+              type="number"
+              name="number"
+              id="number"
+              placeholder="0123456789"
             />
-            <section>
-              <label for="">Numero de Telefono:</label>
-              <input
-                type="number"
-                name="number"
-                id="number"
-                placeholder="0123456789"
-              />
-            </section>
-            <p>Has visitado estos lugares?</p>
-            <select name="opciones" id="opciones">
-              <option value="">Si</option>
-              <option value="">No</option>
-            </select>
-            <p>Cuales de ellos has visitado?</p>
-            <select name="opciones" id="opciones">
-              <option value="">Camino de las Altas Cumbres</option>
-              <option value="">Cerro Champaqui</option>
-              <option value="">Cordoba Capital</option>
-              <option value="">Estancias Jesuiticas</option>
-              <option value="">Mar Chiquita</option>
-              <option value="">Los Gigantes</option>
-              <option value="">Pueblo Escondido</option>
-              <option value="">Salinas Grandes</option>
-              <option value="">Tuneles de Taninga</option>
-              <option value="">Valle de Calamuchita</option>
-              <option value="">Ninguno</option>
-            </select>
-            <p>Contanos tu experiencia:</p>
-            <textarea name="" id="" cols="50" rows="10"></textarea>
-            <input type="submit" value="Enviar"/>
-          </form>
-    </div>
+          </section>
+          <p>Has visitado estos lugares?</p>
+          <select name="opciones" id="opciones">
+            <option value="">Si</option>
+            <option value="">No</option>
+          </select>
+          <p>Cuales de ellos has visitado?</p>
+          <select name="opciones" id="opciones">
+            <option value="">Camino de las Altas Cumbres</option>
+            <option value="">Cerro Champaqui</option>
+            <option value="">Cordoba Capital</option>
+            <option value="">Estancias Jesuiticas</option>
+            <option value="">Mar Chiquita</option>
+            <option value="">Los Gigantes</option>
+            <option value="">Pueblo Escondido</option>
+            <option value="">Salinas Grandes</option>
+            <option value="">Tuneles de Taninga</option>
+            <option value="">Valle de Calamuchita</option>
+            <option value="">Ninguno</option>
+          </select>
+          <p>Contanos tu experiencia:</p>
+          <textarea name="" id="" cols="50" rows="10"></textarea>
+          <input type="submit" value="Enviar" />
+        </form>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
