--- a/html/mensaje.html
+++ b/html/mensaje.html
@@ -10,22 +10,24 @@
     <header>
       <nav>
         <div class="menu-principal">
-        <h1>
-          <img src="../img/logocordoba.avif" alt="Bandera Cordoba" /> YO
-          <img src="../img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
-        </h1>
-        <div class="link">
-          <a href="../index.html">Inicio</a>
-          <a href="../html/nosotros.html">Nosotros</a>
-          <a href="../html/lugares.html">Lugares</a>
-          <a href="../html/videos.html">Videos</a>
-          <a href="../html/contactos.html">Contactos</a>
-    </div>
-    </div>
+          <h1>
+            <img src="../img/logocordoba.avif" alt="Bandera Cordoba" /> YO
+            <img src="../img/icons8-me-gusta-48.png" alt="Corazon" /> CBA
+          </h1>
+          <div class="link">
+            <a href="../index.html">Inicio</a>
+            <a href="../html/nosotros.html">Nosotros</a>
+            <a href="../html/lugares.html">Lugares</a>
+            <a href="../html/videos.html">Videos</a>
+            <a href="../html/contactos.html">Contactos</a>
+          </div>
+        </div>
       </nav>
     </header>
-    <p>¡Gracias por visitar nuestra página!</p>
-    <p>Esperamos que haya encontrado la información que buscaba.</p>
-    <p>Responderemos a la brevedad...</p>
+    <main>
+      <p>¡Gracias por visitar nuestra página!</p>
+      <p>Esperamos que haya encontrado la información que buscaba.</p>
+      <p>Responderemos a la brevedad...</p>
+    </main>
   </body>
 </html>
