--- a/html/videos.html
+++ b/html/videos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LugaresUnicosCordoba | videos</title>
-    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
@@ -24,6 +24,8 @@
     </div>
       </nav>
     </header>
+
+    <main>
     <h2>Lugares unicos para visitar en Cordoba</h2>
     <div class="videos-conf" >
     <section id="VideoAltasCumbres">
@@ -102,5 +104,6 @@
         </ul>
     </section>
 </div>
+</main>
   </body>
 </html>
