se agrego animaciones

--- a/html/contactos.html
+++ b/html/contactos.html
@@ -20,19 +20,17 @@
             <img
               src="../img/logocordoba.avif"
               alt="Bandera Cordoba"
-              style="height: 20px; width: 30px"
             />
             YO
             <img
               src="../img/icons8-me-gusta-48.png"
               alt="Corazon"
-              style="height: 20px; width: 20px"
             />
             CBA
           </h1>
           <div class="link">
             <a href="../index.html">Inicio</a>
-            <a href="../hmtl/nosotros.html">Nosotros</a>
+            <a href="../html/nosotros.html">Nosotros</a>
             <a href="../html/lugares.html">Lugares</a>
             <a href="../html/videos.html">Videos</a>
             <a href="../html/contactos.html">Contactos</a>
@@ -55,7 +53,6 @@
             type="text"
             name="nombre"
             id="nombre"
-            placeholder="Susana Horia"
           />
           <section>
             <label for="">Numero de Telefono:</label>
@@ -63,7 +60,6 @@
               type="number"
               name="number"
               id="number"
-              placeholder="0123456789"
             />
           </section>
           <p>Has visitado estos lugares?</p>
@@ -89,6 +85,12 @@
           <textarea name="" id="" cols="50" rows="10"></textarea>
           <input type="submit" value="Enviar" />
         </form>
+        <a href="">
+          <img class="icons-equipaje" src="../img/shine-group-of-diverse-people-1.png" alt="icono-travel">
+        </a>
+        <a href="">
+          <img class="icons-auto" src="../img/fabulous-airplane.png" alt="icono-travel">
+        </a>
       </div>
     </main>
     <script
