--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -28,7 +28,7 @@
       <h2>Bienvenido a la provincia de Córdoba!!!</h2>
 
       <p>
-        un tesoro natural y cultural situado en el corazón de Argentina.
+        Un tesoro natural y cultural situado en el corazón de Argentina.
         Sumérgete en un mundo donde la majestuosidad de las montañas, la
         serenidad de los ríos, la riqueza histórica de sus pueblos y la calidez
         de su gente te invitan a explorar y descubrir un sinfín de experiencias
