--- a/html/mensaje.html
+++ b/html/mensaje.html
@@ -25,9 +25,9 @@
       </nav>
     </header>
     <main>
-      <p>¡Gracias por visitar nuestra página!</p>
-      <p>Esperamos que haya encontrado la información que buscaba.</p>
-      <p>Responderemos a la brevedad...</p>
+      <p style="font-size: 50px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">¡Gracias por visitar nuestra página!</p>
+      <p style="font-size: 40px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Esperamos que haya encontrado la información que buscaba.</p>
+      <p style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Responderemos a la brevedad...</p>
     </main>
   </body>
 </html>
