--- a/html/lugares.html
+++ b/html/lugares.html
@@ -541,4 +541,7 @@ Cada estación del año aporta algo especial a Villa Carlos Paz, desde la explos
   crossorigin="anonymous"
 ></script>
   </body>
+  <footer>
+    Developed by Franco Farias, © 2024.
+  </footer>
 </html>
