--- a/html/mensaje.html
+++ b/html/mensaje.html
@@ -30,4 +30,7 @@
       <p style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Responderemos a la brevedad...</p>
     </main>
   </body>
+  <footer>
+    Developed by Franco Farias, © 2024.
+  </footer>
 </html>
