--- a/html/contactos.html
+++ b/html/contactos.html
@@ -99,4 +99,7 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <footer>
+    Developed by Franco Farias, © 2024.
+  </footer>
 </html>
