cambios de scss hechos

--- a/html/contactos.html
+++ b/html/contactos.html
@@ -86,10 +86,10 @@
           <input type="submit" value="Enviar" />
         </form>
         <a href="">
-          <img class="icons-equipaje" src="../img/shine-group-of-diverse-people-1.png" alt="icono-travel">
+          <img class="icons-personas" src="../img/shine-group-of-diverse-people-1.png" alt="icono-travel">
         </a>
         <a href="">
-          <img class="icons-auto" src="../img/fabulous-airplane.png" alt="icono-travel">
+          <img class="icons-avion" src="../img/fabulous-airplane.png" alt="icono-travel">
         </a>
       </div>
     </main>
