se agregaron mas imagenes, modificaciones en scss, modificaciones en los textos de los arhicos nlugares y nosotros, se agrego una animacion en el html mensaje

--- a/html/contactos.html
+++ b/html/contactos.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LugaresUnicosCordoba | contactos</title>
+    <!-- SEO ON PAGE -->
+    <meta
+      name="description"
+      content="Descubre Córdoba, Argentina, con nuestras guías detalladas, galerías de imágenes, videos y mapas. Explora sus paisajes y rica cultura."
+    />
+    <meta
+      name="keywords"
+      content="Córdoba Argentina turismo, lugares para visitar en Córdoba, guía turística Córdoba, paisajes de Córdoba, cultura de Córdoba, atracciones en Córdoba, mapas de Córdoba, videos de Córdoba, imágenes de Córdoba, explorar Córdoba"
+    />
+    <meta name="telephone" content="+5493513693371" />
+    <meta name="whatsapp" content="+5493513693371" />
+    <meta name="author" content="Franco Farías" />
+    <meta name="geo.placename" content="Cordoba" />
+    <link
+      rel="shortcut icon"
+      href="../img/logocordoba.avif"
+      type="image/x-icon"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,15 +35,9 @@
       <nav>
         <div class="menu-principal">
           <h1>
-            <img
-              src="../img/logocordoba.avif"
-              alt="Bandera Cordoba"
-            />
+            <img src="../img/logocordoba.avif" alt="Bandera Cordoba" />
             YO
-            <img
-              src="../img/icons8-me-gusta-48.png"
-              alt="Corazon"
-            />
+            <img src="../img/icons8-me-gusta-48.png" alt="Corazon" />
             CBA
           </h1>
           <div class="link">
@@ -49,18 +61,10 @@
         </p>
         <form action="../html/mensaje.html" method="get">
           <label for="">Nombre y Apellido:</label>
-          <input
-            type="text"
-            name="nombre"
-            id="nombre"
-          />
+          <input type="text" name="nombre" id="nombre" />
           <section>
             <label for="">Numero de Telefono:</label>
-            <input
-              type="number"
-              name="number"
-              id="number"
-            />
+            <input type="number" name="number" id="number" />
           </section>
           <p>Has visitado estos lugares?</p>
           <select name="opciones" id="opciones">
@@ -85,8 +89,16 @@
           <textarea name="" id="" cols="50" rows="10"></textarea>
           <input type="submit" value="Enviar" />
         </form>
-          <img class="icons-personas" src="../img/shine-group-of-diverse-people-1.png" alt="icono-travel">
-          <img class="icons-avion" src="../img/fabulous-airplane.png" alt="icono-travel">
+        <img
+          class="icons-personas"
+          src="../img/shine-group-of-diverse-people-1.png"
+          alt="icono-travel"
+        />
+        <img
+          class="icons-avion"
+          src="../img/fabulous-airplane.png"
+          alt="icono-travel"
+        />
       </div>
     </main>
     <script
@@ -95,7 +107,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
-  <footer>
-    Developed by Franco Farias, © 2024.
-  </footer>
+  <footer>Developed by Franco Farias, © 2024.</footer>
 </html>
