--- a/html/mensaje.html
+++ b/html/mensaje.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LugaresUnicosCordoba | mensaje</title>
+    <!-- SEO ON PAGE -->
+    <meta
+      name="description"
+      content="Descubre Córdoba, Argentina, con nuestras guías detalladas, galerías de imágenes, videos y mapas. Explora sus paisajes y rica cultura."
+    />
+    <meta
+      name="keywords"
+      content="Córdoba Argentina turismo, lugares para visitar en Córdoba, guía turística Córdoba, paisajes de Córdoba, cultura de Córdoba, atracciones en Córdoba, mapas de Córdoba, videos de Córdoba, imágenes de Córdoba, explorar Córdoba"
+    />
+    <meta name="telephone" content="+5493513693371" />
+    <meta name="whatsapp" content="+5493513693371" />
+    <meta name="author" content="Franco Farías" />
+    <meta name="geo.placename" content="Cordoba" />
+    <link
+      rel="shortcut icon"
+      href="../img/logocordoba.avif"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
@@ -25,12 +43,15 @@
       </nav>
     </header>
     <main>
-      <p style="font-size: 50px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">¡Gracias por visitar nuestra página!</p>
-      <p style="font-size: 40px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Esperamos que haya encontrado la información que buscaba.</p>
-      <p style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Responderemos a la brevedad...</p>
+      <div class="mensaje">
+        <p class="principal">¡Gracias por visitar nuestra página!</p>
+        <p class="secundario">
+          Esperamos que haya encontrado la información que buscaba.
+        </p>
+        <p class="terciario">Responderemos a la brevedad...</p>
+        <img src="../img/hugo-252.png" alt="gracias" />
+      </div>
     </main>
   </body>
-  <footer>
-    Developed by Franco Farias, © 2024.
-  </footer>
+  <footer>Developed by Franco Farias, © 2024.</footer>
 </html>
