--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LugaresUnicosCordoba | nosotros</title>
+    <!-- SEO ON PAGE -->
+    <meta
+      name="description"
+      content="Descubre Córdoba, Argentina, con nuestras guías detalladas, galerías de imágenes, videos y mapas. Explora sus paisajes y rica cultura."
+    />
+    <meta
+      name="keywords"
+      content="Córdoba Argentina turismo, lugares para visitar en Córdoba, guía turística Córdoba, paisajes de Córdoba, cultura de Córdoba, atracciones en Córdoba, mapas de Córdoba, videos de Córdoba, imágenes de Córdoba, explorar Córdoba"
+    />
+    <meta name="telephone" content="+5493513693371" />
+    <meta name="whatsapp" content="+5493513693371" />
+    <meta name="author" content="Franco Farías" />
+    <meta name="geo.placename" content="Cordoba" />
+    <link
+      rel="shortcut icon"
+      href="../img/logocordoba.avif"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
@@ -28,51 +46,33 @@
       <h2>Bienvenido a la provincia de Córdoba!!!</h2>
 
       <p>
-        Un tesoro natural y cultural situado en el corazón de Argentina.
-        Sumérgete en un mundo donde la majestuosidad de las montañas, la
-        serenidad de los ríos, la riqueza histórica de sus pueblos y la calidez
-        de su gente te invitan a explorar y descubrir un sinfín de experiencias
-        inolvidables.
+        Un destino donde la cultura y la naturaleza se unen en un espectáculo
+        impresionante! Córdoba te invita a explorar desde las majestuosas
+        Sierras Grandes hasta los tranquilos valles llenos de pueblos
+        pintorescos, cada uno con su propia historia y belleza única.
       </p>
       <p>
-        En cada rincón de esta provincia, desde las imponentes alturas de las
-        Sierras Grandes hasta los tranquilos valles que acunan a pintorescos
-        pueblos, encontrarás una historia que contar y un paisaje que admirar.
-        Córdoba deslumbra con su diversidad, ofreciendo una mezcla perfecta
-        entre la vibrante vida urbana de su capital y la serena belleza de sus
-        rincones naturales.
+        Descubre el legado colonial en las estancias jesuíticas y admira la
+        arquitectura de las antiguas capillas que reflejan la profunda
+        influencia cultural y religiosa en la región. Déjate encantar por los
+        paisajes naturales de Córdoba, con senderos que te llevan a través de
+        bosques antiguos y cascadas cristalinas, y sumérgete en la serenidad de
+        sus ríos y embalses.
       </p>
       <p>
-        Descubre la fascinante historia de las estancias jesuíticas, testigos
-        silenciosos del legado colonial que dejaron los misioneros en estas
-        tierras. Recorre las antiguas capillas que aún conservan su esplendor
-        arquitectónico, recordándonos la influencia de la fe y la cultura en la
-        formación de nuestra identidad.
+        Desde los picos más altos, experimenta vistas impresionantes donde el
+        viento parece narrar historias ancestrales y los atardeceres pintan el
+        cielo con colores vibrantes. Córdoba te ofrece 12 de los lugares más
+        hermosos para visitar, cada uno capturando la esencia de su encanto.
       </p>
       <p>
-        Déjate seducir por la exuberante naturaleza que caracteriza a Córdoba,
-        con sus senderos sinuosos que serpentean entre árboles centenarios y
-        cascadas cristalinas que refrescan el alma. Sumérgete en las aguas de
-        sus ríos y embalses, donde la tranquilidad y la belleza se funden en un
-        abrazo eterno con la tierra.
+        Prepárate para ser cautivado por la hospitalidad de su gente y la
+        belleza indomable de Córdoba, donde los sueños se hacen realidad y la
+        aventura nunca termina.
       </p>
       <p>
-        No puedes dejar de maravillarte con la imponente vista desde los picos
-        más altos, donde el viento susurra historias ancestrales y el sol
-        acaricia las cumbres con su luz dorada. Contempla el atardecer pintando
-        el cielo de colores que solo la naturaleza puede crear, y déjate llevar
-        por la magia de este lugar único.
-      </p>
-      <p>
-        En cada uno de los 12 lugares más bellos que Córdoba tiene para ofrecer,
-        encontrarás un pedacito de su esencia, una razón para volver una y otra
-        vez. Prepárate para ser cautivado por la belleza indomable de esta
-        tierra y por la hospitalidad de su gente, que te recibirá con los brazos
-        abiertos y el corazón lleno de orgullo por compartir contigo su hogar.
-      </p>
-      <p>
-        ¡Bienvenido a Córdoba, donde los sueños se hacen realidad y la aventura
-        nunca termina!
+        ¡Descubre Córdoba, un tesoro en el corazón de Argentina que promete
+        experiencias inolvidables!
       </p>
 
       <h3>Lugares unicos para visitar en Cordoba</h3>
@@ -177,7 +177,5 @@
       </section>
     </main>
   </body>
-  <footer>
-    Developed by Franco Farias, © 2024.
-  </footer>
+  <footer>Developed by Franco Farias, © 2024.</footer>
 </html>
