--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LugaresUnicosCordoba | inicio</title>
+    <!-- SEO ON PAGE -->
+    <meta
+      name="description"
+      content="Descubre Córdoba, Argentina, con nuestras guías detalladas, galerías de imágenes, videos y mapas. Explora sus paisajes y rica cultura."
+    />
+    <meta
+      name="keywords"
+      content="Córdoba Argentina turismo, lugares para visitar en Córdoba, guía turística Córdoba, paisajes de Córdoba, cultura de Córdoba, atracciones en Córdoba, mapas de Córdoba, videos de Córdoba, imágenes de Córdoba, explorar Córdoba"
+    />
+    <meta name="telephone" content="+5493513693371" />
+    <meta name="whatsapp" content="+5493513693371" />
+    <meta name="author" content="Franco Farías" />
+    <meta name="geo.placename" content="Cordoba" />
+    <link
+      rel="shortcut icon"
+      href="./img/logocordoba.avif"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -35,7 +53,5 @@
       </section>
     </main>
   </body>
-  <footer>
-    Developed by Franco Farias, © 2024.
-  </footer>
+  <footer>Developed by Franco Farias, © 2024.</footer>
 </html>
